<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".ui.add.AddEventActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/edt_event_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/add_event_tile" />
            </com.google.android.material.appbar.AppBarLayout>

            <EditText
                android:id="@+id/edt_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/event_tile_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.139" />


            <EditText
                android:id="@+id/edt_event_date"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="2dp"
                android:clickable="true"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/select_date_hint"
                android:inputType="text"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/tv_date_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_event_title" />


            <TextView
                android:id="@+id/tv_date_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="19dp"
                android:textColor="#D81B60"
                app:layout_constraintBottom_toTopOf="@+id/edt_event_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_event_date"
                tools:text="tv_date_error" />

            <EditText
                android:id="@+id/edt_event_time"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="2dp"
                android:clickable="true"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/select_time_hint"
                android:inputType="text"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/tv_time_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_event_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_time_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="18dp"
                android:textColor="#D81B60"
                app:layout_constraintBottom_toTopOf="@+id/edt_event_notes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_event_time"
                tools:text="tv_time_error" />

            <EditText
                android:id="@+id/edt_event_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="221dp"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/event_notes_hint"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_time_error" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="149dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="168dp"
                android:layout_marginBottom="111dp"
                android:enabled="false"
                android:text="Save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_event_notes"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
